Document PPDG/src/objects/Daily_Branch_Control_Log__c.object
<CustomObject>
    <fields>
        <fullName>ATM_Balance__c</fullName>
        <label>ATM Balance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ATM_replenishment_needed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>ATM replenishment needed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_mismatch_cases_completed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Ensure all address mismatch cases are completed with full details and new credit score updated with decision ID completed. (Evidence obtained)</inlineHelpText>
        <label>Address mismatch cases completed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_mismatch_report__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Address mismatch report</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_KYC_checklists_attached__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>All KYC checklists attached</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_checks_carried_out__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>All checks carried out</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_entries_passed_on_Engage__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>All entries passed on Engage</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_issue_and_action_taken__c</fullName>
        <label>Any issues and action taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_issues_and_action_taken__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Any issues and action taken</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_unusual_transactions__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Any unusual transactions</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Branch_Control_Log9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authenticity_Log_updated__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Authenticity Log updated</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_name__c</fullName>
        <label>Branch name</label>
        <picklist>
            <picklistValues>
                <fullName>London- Knightsbridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London- Edgware Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London- Whitechapel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_pending_work_due_today_completed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>All pending work due today completed from branch pending tray/folder</inlineHelpText>
        <label>Branch pending work due today completed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_scanning_complete__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Confirm all customers instructions, journals have been scanned, indexed and archived (flushed) on DSX and Authenticity Log updated.</inlineHelpText>
        <label>Branch scanning complete</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brochure_racks_well_stocked__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Brochure racks well stocked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCTV_equipment_checked__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>CCTV equipment checked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCTV_working__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>CCTV working</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMS_Salesforce_Balance_Entered__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>CMS Salesforce Balance Entered</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COB_physical_cash_checked__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>COB physical cash checked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_agrees_with_vault_register__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Cash agrees with vault register</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_difference_form_completed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Cash difference form completed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_difference_reporting__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Cash difference reporting</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_SFDC_case_updated__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check SFDC case updated</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_and_authorise_pending_RSO_UGA__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check and authorise pending RSO &amp; UGA</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_any_outstanding_orders__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check any outstanding orders</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_banking_hall_for_tidiness__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check banking hall for tidiness</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_cash_levels_for_branch__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check cash levels for branch</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_sample_of_3_closed_cases__c</fullName>
        <description>Check a sample of 3 closed cases for the previous day and check the quality of notes made. Record the sample on the BCL and the finding.</description>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check sample of 3 closed cases</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_the_vault_is_under_dual_control__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check the vault is under dual control</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_till_drawers_locked__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check till drawers locked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_vault_register_completed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Check vault register completed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checked_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checked by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Branch_Control_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clear_desk_policy_followed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Clear desk policy followed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Branch_Control_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidential_info_stored_correctly__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Confidential info stored correctly</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirm_attended_engineer_visits_today__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Confirm attended engineer visits today</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirm_vault_locked__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Confirm vault locked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correct_approvals_on_system__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Correct approvals on system</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custodian_bag_delivered_successfully__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Custodian bag delivered successfully</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_accounts_meet_opening_criteria__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Customer accounts meet opening criteria</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_close_done_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day close done by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Branch_Control_Log2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_close_journal_keyed_in_EBS__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Day close journal keyed in EBS</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decide_if_courier_service_required__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Decide if courier service required</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivered_by__c</fullName>
        <label>Delivered by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Done_by1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Done by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Branch_Control_Log4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Done_by2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Done by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Branch_Control_Log5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Done_by3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Done by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_Branch_Control_Log6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBS_balance_checked__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>EBS balance checked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBS_total__c</fullName>
        <label>EBS total</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_sent__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Email sent</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_sent_to_Facilities__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>E-mail sent to Facilities</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engage_cash_total__c</fullName>
        <label>Engage cash total</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engage_dashboard_report_attached__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Engage dashboard report attached</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engage_reconciled__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Engage reconciled</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engage_report_attached__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Engage report attached</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalate_as_necessary__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Escalate as necessary</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evidence_of_cash_deposit__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Evidence of cash deposit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Findings1__c</fullName>
        <label>Findings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Findings2__c</fullName>
        <label>Findings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Findings3__c</fullName>
        <label>Findings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many__c</fullName>
        <label>How many</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_No_remedial_carried_out__c</fullName>
        <label>If No remedial carried out</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments10__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments11__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments12__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Log_ATM_downtime__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Log ATM downtime</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_company_ies_attended__c</fullName>
        <label>Name of company(ies) attended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Address_mismatches__c</fullName>
        <label>Number of Address mismatches</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_breached_cases__c</fullName>
        <label>Number of breached cases</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_deposits__c</fullName>
        <label>Number of deposits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_SFDC_case_at_COB_updated__c</fullName>
        <label>Open SFDC case at COB updated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_SFDC_case_check_AM__c</fullName>
        <label>Open SFDC case check AM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_SFDC_case_check_EOD__c</fullName>
        <label>Open SFDC case check EOD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_SFDC_case_check_PM__c</fullName>
        <label>Open SFDC case check PM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ordered__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Ordered</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_banking_hall_check__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Check banking hall for tidiness and brochure racks well stocked and that no confidential material has been left in rooms or the front desk. Also, to ensure up to date collateral/posters on display.
Clear desk policy is maintained throughout the day.</inlineHelpText>
        <label>Physical banking hall check</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Playback_viewed_of__c</fullName>
        <label>Playback viewed of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prepare_for_uplift__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Prepare for uplift</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Random_till_check__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Random till check</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receipt_obtained__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Receipt obtained</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Replenishment_done__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Replenishment done</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_check_of_3_closed_cases__c</fullName>
        <label>Sample check of 3 closed cases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Till_1__c</fullName>
        <label>Till 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Till_2__c</fullName>
        <label>Till 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Till_3__c</fullName>
        <label>Till 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Till_bulk_check_completed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Ensure that all tills have had a bulk check completed by the manager before the cashier goes home. Record balances in the comments.
 
Vault balance by COB
(Email sent to Senior Management if limit exceeded)
if 5 working days exceeded, escalate</inlineHelpText>
        <label>Till bulk check completed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Till_or_vault_differences_investigated__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Till or vault differences investigated</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tills_Over__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Tills Over</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_checked__c</fullName>
        <label>Time checked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_of_check__c</fullName>
        <label>Time of check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_tills_checked__c</fullName>
        <label>Time tills checked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_vault_checked__c</fullName>
        <label>Time vault checked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vault_balance_COB__c</fullName>
        <label>Vault balance COB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wakala_and_Term_EBS__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Wakala and Term EBS</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X13_00_ATM_ok__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>13:00 ATM ok</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X17_00_ATM_ok__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>17:00 ATM ok</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X9_30_ATM_ok__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Check ATM 3 times to ensure no evidence of tampering. Inform police; BM; Ops manager, FCU, Head of Branches and ATM service provider where there are concerns of ATM tampering.</inlineHelpText>
        <label>9:30 ATM ok</label>
        <type>Picklist</type>
    </fields>
    <label>Daily Branch Control Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Daily Branch Control Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Branch Control Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>